feat: add notebook code

--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,11 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here"
+    "# Imports here\n",
+    "import torch\n",
+    "from torchvision import datasets, transforms, models\n",
+    "from torch import nn\n",
+    "from torch import optim\n",
+    "import torchvision.models as models\n",
+    "import torch.nn.functional as F\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from PIL import Image\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -49,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +74,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
+    "data_transforms = {\n",
+    "  'train_transforms': transforms.Compose([transforms.RandomRotation(30),\n",
+    "                                        transforms.RandomResizedCrop(224),\n",
+    "                                        transforms.RandomHorizontalFlip(),\n",
+    "                                        transforms.ToTensor(),\n",
+    "                                        transforms.Normalize([0.485, 0.456, 0.406],\n",
+    "                                                             [0.229, 0.224, 0.225])\n",
+    "                                        ]),\n",
+    "  'test_transforms': transforms.Compose([transforms.Resize(256),\n",
+    "                                        transforms.CenterCrop(224),\n",
+    "                                        transforms.ToTensor(),\n",
+    "                                        transforms.Normalize([0.485, 0.456, 0.406], \n",
+    "                                                             [0.229, 0.224, 0.225])\n",
+    "                                        ]),\n",
+    "  'validation_transforms': transforms.Compose([transforms.Resize(256),\n",
+    "                                              transforms.CenterCrop(224),\n",
+    "                                              transforms.ToTensor(),\n",
+    "                                              transforms.Normalize([0.485, 0.456, 0.406], \n",
+    "                                                                   [0.229, 0.224, 0.225])\n",
+    "                                              ])\n",
+    "}\n",
     "\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "image_datasets = {\n",
+    "  'train_data': datasets.ImageFolder(data_dir + '/train', transform = data_transforms['train_transforms']),\n",
+    "  'test_data': datasets.ImageFolder(data_dir + '/test', transform = data_transforms['test_transforms']),\n",
+    "  'valid_data': datasets.ImageFolder(data_dir + '/valid', transform = data_transforms['validation_transforms'])\n",
+    "}\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "dataloaders = {\n",
+    "  'trainloader': torch.utils.data.DataLoader(image_datasets['train_data'], batch_size = 64, shuffle = True),\n",
+    "  'testloader': torch.utils.data.DataLoader(image_datasets['test_data'], batch_size = 32, shuffle = True),\n",
+    "  'validloader': torch.utils.data.DataLoader(image_datasets['valid_data'], batch_size = 32, shuffle = True)\n",
+    "}"
    ]
   },
   {
@@ -86,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +161,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 35\u001b[0m\n\u001b[0;32m     31\u001b[0m   model\u001b[38;5;241m.\u001b[39mcuda()\n\u001b[0;32m     33\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m model, optimizer, criterion\n\u001b[1;32m---> 35\u001b[0m model, optimizer, criterion \u001b[38;5;241m=\u001b[39m network_struct(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvgg16\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtrain_neural_net\u001b[39m(model, trainloader, epochs, print_every, criterion, optimizer, device \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     39\u001b[0m   steps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "Cell \u001b[1;32mIn[18], line 31\u001b[0m, in \u001b[0;36mnetwork_struct\u001b[1;34m(structure, dropout, hidden_layer1, lr)\u001b[0m\n\u001b[0;32m     29\u001b[0m criterion \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mNLLLoss()\n\u001b[0;32m     30\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mclassifier\u001b[38;5;241m.\u001b[39mparameters(), lr)\n\u001b[1;32m---> 31\u001b[0m model\u001b[38;5;241m.\u001b[39mcuda()\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m model, optimizer, criterion\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:915\u001b[0m, in \u001b[0;36mModule.cuda\u001b[1;34m(self, device)\u001b[0m\n\u001b[0;32m    898\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcuda\u001b[39m(\u001b[38;5;28mself\u001b[39m: T, device: Optional[Union[\u001b[38;5;28mint\u001b[39m, device]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T:\n\u001b[0;32m    899\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Move all model parameters and buffers to the GPU.\u001b[39;00m\n\u001b[0;32m    900\u001b[0m \n\u001b[0;32m    901\u001b[0m \u001b[38;5;124;03m    This also makes associated parameters and buffers different objects. So\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    913\u001b[0m \u001b[38;5;124;03m        Module: self\u001b[39;00m\n\u001b[0;32m    914\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 915\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_apply(\u001b[38;5;28;01mlambda\u001b[39;00m t: t\u001b[38;5;241m.\u001b[39mcuda(device))\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:779\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn, recurse)\u001b[0m\n\u001b[0;32m    777\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m recurse:\n\u001b[0;32m    778\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m module \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchildren():\n\u001b[1;32m--> 779\u001b[0m         module\u001b[38;5;241m.\u001b[39m_apply(fn)\n\u001b[0;32m    781\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    782\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    783\u001b[0m         \u001b[38;5;66;03m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    784\u001b[0m         \u001b[38;5;66;03m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    789\u001b[0m         \u001b[38;5;66;03m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    790\u001b[0m         \u001b[38;5;66;03m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:779\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn, recurse)\u001b[0m\n\u001b[0;32m    777\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m recurse:\n\u001b[0;32m    778\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m module \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mchildren():\n\u001b[1;32m--> 779\u001b[0m         module\u001b[38;5;241m.\u001b[39m_apply(fn)\n\u001b[0;32m    781\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    782\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    783\u001b[0m         \u001b[38;5;66;03m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    784\u001b[0m         \u001b[38;5;66;03m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    789\u001b[0m         \u001b[38;5;66;03m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    790\u001b[0m         \u001b[38;5;66;03m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:804\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn, recurse)\u001b[0m\n\u001b[0;32m    800\u001b[0m \u001b[38;5;66;03m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[0;32m    801\u001b[0m \u001b[38;5;66;03m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[0;32m    802\u001b[0m \u001b[38;5;66;03m# `with torch.no_grad():`\u001b[39;00m\n\u001b[0;32m    803\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m--> 804\u001b[0m     param_applied \u001b[38;5;241m=\u001b[39m fn(param)\n\u001b[0;32m    805\u001b[0m p_should_use_set_data \u001b[38;5;241m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[0;32m    807\u001b[0m \u001b[38;5;66;03m# subclasses may have multiple child tensors so we need to use swap_tensors\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:915\u001b[0m, in \u001b[0;36mModule.cuda.<locals>.<lambda>\u001b[1;34m(t)\u001b[0m\n\u001b[0;32m    898\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcuda\u001b[39m(\u001b[38;5;28mself\u001b[39m: T, device: Optional[Union[\u001b[38;5;28mint\u001b[39m, device]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T:\n\u001b[0;32m    899\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Move all model parameters and buffers to the GPU.\u001b[39;00m\n\u001b[0;32m    900\u001b[0m \n\u001b[0;32m    901\u001b[0m \u001b[38;5;124;03m    This also makes associated parameters and buffers different objects. So\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    913\u001b[0m \u001b[38;5;124;03m        Module: self\u001b[39;00m\n\u001b[0;32m    914\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 915\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_apply(\u001b[38;5;28;01mlambda\u001b[39;00m t: t\u001b[38;5;241m.\u001b[39mcuda(device))\n",
+      "File \u001b[1;32mc:\\Users\\admin\\anaconda3\\Lib\\site-packages\\torch\\cuda\\__init__.py:284\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    279\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    280\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[0;32m    283\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 284\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    285\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    286\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    287\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    288\u001b[0m     )\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Build and train your network"
+    "# TODO: Build and train your network\n",
+    "archs = {\"vgg16\": 25088, \"densenet121\": 1024, \"alexnet\": 9216}\n",
+    "\n",
+    "def network_struct(structure = 'vgg16', dropout = 0.5, hidden_layer1 = 256, lr = 0.001):\n",
+    "  if structure == 'vgg16':\n",
+    "    model = models.vgg16(pretrained=True)        \n",
+    "  elif structure == 'densenet121':\n",
+    "    model = models.densenet121(pretrained=True)\n",
+    "  elif structure == 'alexnet':\n",
+    "    model = models.alexnet(pretrained = True)\n",
+    "  else:\n",
+    "    print(f\"{structure} is not a valid model. Try one of these: vgg16, densenet121 or alexnet.\")\n",
+    "      \n",
+    "  for param in model.parameters():\n",
+    "    param.requires_grad = False\n",
+    "      \n",
+    "  classifier = nn.Sequential(OrderedDict([\n",
+    "    ('fc1', nn.Linear(archs[structure], hidden_layer1)),\n",
+    "    ('relu1', nn.ReLU()),\n",
+    "    ('drop_out1',nn.Dropout(dropout)),\n",
+    "    ('fc2', nn.Linear(hidden_layer1, 128)),\n",
+    "    ('relu2', nn.ReLU()),\n",
+    "    ('drop_out2',nn.Dropout(dropout)),\n",
+    "    ('fc3', nn.Linear(128, 102)),\n",
+    "    ('output', nn.LogSoftmax(dim=1))\n",
+    "  ]))\n",
+    "\n",
+    "  model.classifier = classifier\n",
+    "  criterion = nn.NLLLoss()\n",
+    "  optimizer = optim.Adam(model.classifier.parameters(), lr)\n",
+    "  model.cuda()\n",
+    "  \n",
+    "  return model, optimizer, criterion\n",
+    "\n",
+    "model, optimizer, criterion = network_struct('vgg16')\n",
+    "\n",
+    "def train_neural_net(model, trainloader, epochs, print_every, criterion, optimizer, device = 'cpu'):\n",
+    "\n",
+    "  steps = 0\n",
+    "  # change to cuda\n",
+    "  model.to('cuda')\n",
+    "\n",
+    "  for e in range(epochs):\n",
+    "    running_loss = 0\n",
+    "\n",
+    "    for ii, (images, labels) in enumerate(trainloader):\n",
+    "      steps += 1\n",
+    "\n",
+    "      images, labels = images.to('cuda'), labels.to('cuda')\n",
+    "      optimizer.zero_grad()\n",
+    "\n",
+    "      # Forward and backward passes\n",
+    "      outputs = model.forward(images)\n",
+    "      loss = criterion(outputs, labels)\n",
+    "      loss.backward()\n",
+    "      optimizer.step()\n",
+    "      running_loss += loss.item()\n",
+    "\n",
+    "      if steps % print_every == 0:\n",
+    "        model.eval()\n",
+    "        valid_lost = 0\n",
+    "        valid_accuracy = 0\n",
+    "\n",
+    "        for ii, (images2, labels2) in enumerate(dataloaders['validloader']):\n",
+    "          optimizer.zero_grad()\n",
+    "          images2, labels2 = images2.to('cuda') , labels2.to('cuda')\n",
+    "          model.to('cuda')\n",
+    "          with torch.no_grad():    \n",
+    "            outputs = model.forward(images2)\n",
+    "            valid_lost = criterion(outputs, labels2)\n",
+    "            ps = torch.exp(outputs).data\n",
+    "            equality = (labels2.data == ps.max(1)[1])\n",
+    "            valid_accuracy += equality.type_as(torch.FloatTensor()).mean()\n",
+    "\n",
+    "        valid_lost = valid_lost / len(dataloaders['validloader'])\n",
+    "        valid_accuracy = valid_accuracy / len(dataloaders['validloader'])\n",
+    "\n",
+    "        print(f\"Epoch: {e+1}/{epochs}.. \",\n",
+    "              f\"Loss: {running_loss/print_every:.4f}\",\n",
+    "              f\"Validation Lost {valid_lost:.4f}\",\n",
+    "              f\"Accuracy: {valid_accuracy:.4f}\")\n",
+    "        running_loss = 0\n",
+    "\n",
+    "train_neural_net(model, dataloaders['trainloader'], 3, 20, criterion, optimizer)"
    ]
   },
   {
@@ -338,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
